addressing layout issues in project header when page is resized

--- a/app/assets/stylesheets/page.sass
+++ b/app/assets/stylesheets/page.sass
@@ -46,8 +46,9 @@ header
   #page-contents
     width: auto
     #project_masthead
-      #project_header_activity_indicator.no_padding
-        margin-left: 2rem
+      #project_header_activity_indicator
+        width: 16rem !important
+        margin-left: 0px !important
     #project_header
       padding-left: 0
       margin-left: -1rem
